Contrast error corrected

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header {
 
 h1, h2 {
   font-family: 'Oswald', sans-serif;
-  color: #8B0000;
+  color: #eabebe;
 }
 
 main {
